--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     },
     "devDependencies": {
         "gulp": "^3.9.1",
+        "gulp-install": "^1.1.0",
         "gulp-typescript": "^4.0.1",
         "typescript": "^2.7.2"
     },
