--- a/instant-message/package.json
+++ b/instant-message/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "font-awesome": "^4.7.0",
     "rxjs": "^5.5.6",
     "socket.io": "^2.0.4",
     "zone.js": "^0.8.19"
