--- a/instant-message/package.json
+++ b/instant-message/package.json
@@ -24,6 +24,7 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "dynamic-textarea-directive": "^1.6.0",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.5.6",
